<resources>
    <string name="app_name">WCFP-MC</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Please log in…</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_settings">設定</string>
    <string name="menu_about">關於</string>
    <string name="menu_home">首頁</string>
    <string name="menu_category">類別</string>
    <string name="menu_mylist">我的最愛</string>
    <string name="menu_cfp">CFPs</string>
    <string name="menu_login">帳號管理</string>
    <string name="menu_history">歷史紀錄</string>

    <string name="plc_hlder">waiting…</string>

    <!--首頁-->
    <string name="welcome">Welcome!</string>
    <string name="intro">WikiCFP is a semantic wiki for Calls For Papers in science and technology fields. There are about 50,000 CFPs on WikiCFP. Over 100,000 researchers use WikiCFP each month. </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--類別-->
    <string name="cfps">#CFP↓</string>
    <string name="cfps_re">#CFP↑</string>
    <string name="atoz">A-Z</string>
    <string name="ztoa">Z-A</string>
    <string name="CFPs">%1$s CFPs</string>
    <string name="fav">♥</string>

    <!--關於-->
    <string name="contact">Contact us</string>
    <string name="jim_mail">s1071543@mail.yzu.edu.tw</string>
    <string name="yu_mail">s1071536@mail.yzu.edu.tw</string>
    <string name="copyright">Copyright © 2020 – 2020. All rights reserved.</string>

    <!--CFPs-->
    <string name="timeLBL">Time: </string>
    <string name="deadlineLBL">Deadline: </string>

    <!--登入-->
    <string name="accountLBL">Account:</string>
    <string name="passwordLBL">Password</string>
    <string name="forgotLBL"><a href="http://www.wikicfp.com/cfp/servlet/user.reset">Forgot your password?</a></string>
    <string name="submitlogin">登入</string>

    <!--登出-->
    <string name="logout">登出</string>

    <!--設定-->
    <string name="themeLBL">主題</string>
    <string name="DKmode">黑暗模式</string>
    <string name="delete_history">刪除歷史紀錄</string>
    <string name="delete">刪除</string>

    <!--CFP-->
    <string name="CFPtimeLBL">Time : </string>
    <string name="CFPdeadlineLBL">Deadline : </string>
    <string name="CFPlinkLBL">Link : </string>
    <string name="CFPcategoryLBL">Categories : </string>
    <string name="CFPLBL">Call For Papers</string>
    <string name="CFPrelatedLBL">Related Resources</string>
</resources>