<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/ic_list_black"
            android:title="@string/menu_category" />
        <item
        android:id="@+id/nav_mylist"
        android:icon="@drawable/ic_turned_in_black"
        android:title="@string/menu_mylist" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info_black"
            android:title="@string/menu_about" />
    </group>
</menu>