<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.wcfp_mc.ui.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.wcfp_mc.ui.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.wcfp_mc.ui.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/nav_category"
        android:name="com.example.wcfp_mc.ui.CategoryFragment"
        android:label="@string/menu_category"
        tools:layout="@layout/fragment_category">
        <action
            android:id="@+id/action_to_cfp"
            app:destination="@id/nav_cfp">
        </action>
    </fragment>

    <fragment
        android:id="@+id/nav_cfp"
        android:name="com.example.wcfp_mc.ui.CFPsFragment"
        android:label="@string/menu_cfp"
        tools:layout="@layout/fragment_c_f_ps" />

    <fragment
        android:id="@+id/nav_login"
        android:name="com.example.wcfp_mc.ui.LoginFragment"
        android:label="@string/menu_login"
        tools:layout="@layout/fragment_login" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.example.wcfp_mc.ui.LogoutFragment"
        android:label="@string/menu_login"
        tools:layout="@layout/fragment_logout" />

    <action
        android:id="@+id/action_to_login"
        app:destination="@id/nav_login"
        app:popUpTo="@id/nav_login"
        app:popUpToInclusive="true">
    </action>
    <action
        android:id="@+id/action_to_logout"
        app:destination="@id/nav_logout"
        app:popUpTo="@id/nav_logout"
        app:popUpToInclusive="true">
    </action>

</navigation>